[package]
name = "hubermann-ui-leptos"
version = "0.1.0"
edition = "2021"
authors = ["Gabriel Hubermann"]
description = "Design system personal para MVPs financieros y dashboards - Leptos implementation"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
web-sys = "0.3"
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"
