[package]
name = "hubermann-ui"
version = "0.1.0"
edition = "2021"
authors = ["Gabriel Hubermann"]
description = "Design system personal para MVPs financieros y dashboards"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = { version = "0.21", features = ["csr"] }
web-sys = "0.3"
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"
