[package]
name = "hubermann-ui"
version = "0.1.0"
edition = "2021"
authors = ["Gabriel Hubermann"]
description = "Design system personal para MVPs financieros y dashboards"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = { version = "0.21", features = ["csr"] }
web-sys = { version = "0.3", features = ["HtmlSelectElement", "HtmlInputElement", "HtmlElement", "DomTokenList", "KeyboardEvent"] }
wasm-bindgen = "0.2"
gloo = "0.10"
gloo-timers = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"
